--- a/index.html
+++ b/index.html
@@ -489,19 +489,19 @@
             </div>
             <address>
               <ul class="address">
-                <li class="address__item address__item--primary-color">
+                <li class="address__item">
                   m. Warszawa, Aleje Jerozolimskie 21
                 </li>
-                <li class="address__item">
+                <li class="address__item footer--color">
                   <a
                     href="mailto:nfo@devstudio.com"
-                    class="address__item--secondary-color"
+                    class="footer--color"
                   >
                     info@devstudio.com
                   </a>
                 </li>
                 <li class="address__item">
-                  <a href="tel:+48111111111" class="address__item--secondary-color"
+                  <a href="tel:+48111111111" class="footer--color"
                     >+48 111 111 111
                   </a>
                 </li>
@@ -575,16 +575,16 @@
           </div>
           <div>
             <div class="footer__button">
-              <button type="submit" class="footer__button__icon">Zapisz się</button>
+              <button type="submit" class="button-icon">Zapisz się</button>
             </div>
           </div>
         </div>
       </div>
     </footer>
     <div class="modal-window">
-      <div class="modal-window__backdrop is-hidden" data-modal>
+      <div class="backdrop is-hidden" data-modal>
         <div class="modal-window__content">
-          <button type="button" class="modal-windows__button-close" data-modal-close>
+          <button type="button" class="button-close" data-modal-close>
             <svg class="modal-windows__button-close__icon">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
@@ -592,8 +592,8 @@
           <p class="modal-window__heading">Zostaw swoje dane w formularzu poniżej</p>
           <form>
             <label
-              >Imię<input class="modal-windows__input" type="text" name="username" />
-              <svg class="modal-window__input__icon">
+              >Imię<input class="input" type="text" name="username" />
+              <svg class="input__icon">
                 <use
                   href="./images/icons.svg#icon-person"
                   height="18px"
@@ -602,8 +602,8 @@
               </svg>
             </label>
             <label
-              >Telefon<input class="modal-windows__input" type="tel" name="phone" />
-              <svg class="modal-window__input__icon">
+              >Telefon<input class="input" type="tel" name="phone" />
+              <svg class="input__icon">
                 <use
                   href="./images/icons.svg#icon-phone-black"
                   height="18px"
@@ -612,8 +612,8 @@
               </svg>
             </label>
             <label
-              >Email<input class="modal-windows__input" type="email" name="mail" />
-              <svg class="modal-window__input__icon">
+              >Email<input class="input" type="email" name="mail" />
+              <svg class="input__icon">
                 <use
                   href="./images/icons.svg#icon-email-black"
                   height="18px"
@@ -631,8 +631,8 @@
               <input class="check-box" type="checkbox" />
               <div class="check-box__text">
                 Oświadczam iż akceptuję
-                <span class="check-box__text__distinction">Regulamin</span> i
-                <span class="check-box__text__distinction">Politykę Prywatności.</span>
+                <span class="modal-windows__text">Regulamin</span> i
+                <span class="modal-windows__text">Politykę Prywatności.</span>
               </div>
             </label>
           </form>
