--- a/portfolio.html
+++ b/portfolio.html
@@ -66,27 +66,27 @@
       <section>
         <ul class="button-list">
           <li class="button__unit">
-            <button type="button" class="button__unit__all button__unit--style">
+            <button type="button" class="button__first button__unit--style">
               Wszystkie
             </button>
           </li>
           <li class="button__unit">
-            <button type="button" class="button__unit__sites button__unit--style">
+            <button type="button" class="button__second button__unit--style">
               Strony
             </button>
           </li>
           <li class="button__unit">
-            <button type="button" class="button__unit__apps button__unit--style">
+            <button type="button" class="button__third button__unit--style">
               Aplikacje
             </button>
           </li>
           <li class="button__unit">
-            <button type="button" class="button__unit-design button__unit--style">
+            <button type="button" class="button__fourth button__unit--style">
               Dizajn
             </button>
           </li>
           <li class="button__unit">
-            <button type="button" class="button__unit-marketing button__unit--style">
+            <button type="button" class="button__fifth button__unit--style">
               Marketing
             </button>
           </li>
@@ -100,7 +100,7 @@
           <div class="products__container">
             <ul class="products__list">
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-one">
+                <div class="picture__box img-one">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -114,7 +114,7 @@
               </li>
 
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-two">
+                <div class="picture__box img-two">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -127,7 +127,7 @@
                 <p class="products__summary">Dizajn</p>
               </li>
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-three">
+                <div class="picture__box img-three">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -140,7 +140,7 @@
                 <p class="products__summary">Aplikacja</p>
               </li>
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-four">
+                <div class="picture__box img-four">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -153,7 +153,7 @@
                 <p class="products__summary">Marketing</p>
               </li>
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-five">
+                <div class="picture__box img-five">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -166,7 +166,7 @@
                 <p class="products__summary">Aplikacja</p>
               </li>
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-six">
+                <div class="picture__box img-six">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -179,7 +179,7 @@
                 <p class="products__summary">Strona internetowa</p>
               </li>
               <li class="products__picture">
-                <div class="products__picture__box products__picture__box--img-seven">
+                <div class="picture__box img-seven">
                   <div class="products__picture__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -193,7 +193,7 @@
               </li>
               <li class="products__picture">
                 <div
-                  class="products__picture__box products__picture__box--img-seven-eight"
+                  class="picture__box img-seven-eight"
                 >
                   <div class="products__picture__slider">
                     <p>
@@ -208,7 +208,7 @@
               </li>
               <li class="products__picture">
                 <div
-                  class="products__picture__box products__picture__box--img-seven-nine"
+                  class="picture__box img-seven-nine"
                 >
                   <div class="products__picture__slider">
                     <p>
@@ -241,19 +241,19 @@
             </div>
             <address>
               <ul class="address">
-                <li class="address__item address__item--primary-color">
+                <li class="address__item">
                   m. Warszawa, Aleje Jerozolimskie 21
                 </li>
-                <li class="address__item">
+                <li class="address__item footer--color">
                   <a
                     href="mailto:nfo@devstudio.com"
-                    class="address__item--secondary-color"
+                    class="footer--color"
                   >
                     info@devstudio.com
                   </a>
                 </li>
                 <li class="address__item">
-                  <a href="tel:+48111111111" class="address__item--secondary-color"
+                  <a href="tel:+48111111111" class="footer--color"
                     >+48 111 111 111
                   </a>
                 </li>
@@ -327,7 +327,7 @@
           </div>
           <div>
             <div class="footer__button">
-              <button type="submit" class="footer__button__icon">Zapisz się</button>
+              <button type="submit" class="button-icon">Zapisz się</button>
             </div>
           </div>
         </div>
