--- a/portfolio.html
+++ b/portfolio.html
@@ -65,28 +65,28 @@
       <!--  -->
       <section>
         <ul class="button-list">
-          <li class="button__unit">
-            <button type="button" class="button__first button__unit--style">
+          <li class="button__element">
+            <button type="button" class="button__first button__element--style">
               Wszystkie
             </button>
           </li>
-          <li class="button__unit">
-            <button type="button" class="button__second button__unit--style">
+          <li class="button__element">
+            <button type="button" class="button__second button__element--style">
               Strony
             </button>
           </li>
-          <li class="button__unit">
-            <button type="button" class="button__third button__unit--style">
+          <li class="button__element">
+            <button type="button" class="button__third button__element--style">
               Aplikacje
             </button>
           </li>
-          <li class="button__unit">
-            <button type="button" class="button__fourth button__unit--style">
+          <li class="button__element">
+            <button type="button" class="button__fourth button__element--style">
               Dizajn
             </button>
           </li>
-          <li class="button__unit">
-            <button type="button" class="button__fifth button__unit--style">
+          <li class="button__element">
+            <button type="button" class="button__fifth button__element--style">
               Marketing
             </button>
           </li>
@@ -101,7 +101,7 @@
             <ul class="products__list">
               <li class="products__picture">
                 <div class="picture__box img-one">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -115,7 +115,7 @@
 
               <li class="products__picture">
                 <div class="picture__box img-two">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -128,7 +128,7 @@
               </li>
               <li class="products__picture">
                 <div class="picture__box img-three">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -141,7 +141,7 @@
               </li>
               <li class="products__picture">
                 <div class="picture__box img-four">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -154,7 +154,7 @@
               </li>
               <li class="products__picture">
                 <div class="picture__box img-five">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -167,7 +167,7 @@
               </li>
               <li class="products__picture">
                 <div class="picture__box img-six">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -180,7 +180,7 @@
               </li>
               <li class="products__picture">
                 <div class="picture__box img-seven">
-                  <div class="products__picture__slider">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -192,10 +192,8 @@
                 <p class="products__summary">Dizajn</p>
               </li>
               <li class="products__picture">
-                <div
-                  class="picture__box img-seven-eight"
-                >
-                  <div class="products__picture__slider">
+                <div class="picture__box img-eight">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -207,10 +205,8 @@
                 <p class="products__summary">Marketing</p>
               </li>
               <li class="products__picture">
-                <div
-                  class="picture__box img-seven-nine"
-                >
-                  <div class="products__picture__slider">
+                <div class="picture__box img-nine">
+                  <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do
@@ -241,19 +237,14 @@
             </div>
             <address>
               <ul class="address">
+                <li class="address__item">m. Warszawa, Aleje Jerozolimskie 21</li>
                 <li class="address__item">
-                  m. Warszawa, Aleje Jerozolimskie 21
-                </li>
-                <li class="address__item footer--color">
-                  <a
-                    href="mailto:nfo@devstudio.com"
-                    class="footer--color"
-                  >
+                  <a href="mailto:nfo@devstudio.com" class="address__item--color">
                     info@devstudio.com
                   </a>
                 </li>
                 <li class="address__item">
-                  <a href="tel:+48111111111" class="footer--color"
+                  <a href="tel:+48111111111" class="address__item--color"
                     >+48 111 111 111
                   </a>
                 </li>
@@ -266,7 +257,7 @@
               <span class="footer__heading">DOŁĄCZ DO NAS</span>
               <div class="footer__social">
                 <div>
-                  <svg class="social__icon-footer">
+                  <svg class="footer__social-icon">
                     <use
                       href="./images/icons.svg#icon-insta"
                       width="20"
@@ -278,7 +269,7 @@
                 </div>
 
                 <div>
-                  <svg class="social__icon-footer">
+                  <svg class="footer__social-icon">
                     <use
                       href="./images/icons.svg#icon-tweet"
                       width="20"
@@ -290,7 +281,7 @@
                 </div>
 
                 <div>
-                  <svg class="social__icon-footer">
+                  <svg class="footer__social-icon">
                     <use
                       href="./images/icons.svg#icon-face"
                       width="20"
@@ -301,7 +292,7 @@
                   </svg>
                 </div>
                 <div>
-                  <svg class="social__icon-footer">
+                  <svg class="footer__social-icon">
                     <use
                       href="./images/icons.svg#icon-linke"
                       width="20"
