--- a/portfolio.html
+++ b/portfolio.html
@@ -65,27 +65,27 @@
       <!--  -->
       <section>
         <ul class="button-list">
-          <li class="button__element">
+          <li class="button-list__element">
             <button type="button" class="button__first button__element--style">
               Wszystkie
             </button>
           </li>
-          <li class="button__element">
+          <li class="button-list__element">
             <button type="button" class="button__second button__element--style">
               Strony
             </button>
           </li>
-          <li class="button__element">
+          <li class="button-list__element">
             <button type="button" class="button__third button__element--style">
               Aplikacje
             </button>
           </li>
-          <li class="button__element">
+          <li class="button-list__element">
             <button type="button" class="button__fourth button__element--style">
               Dizajn
             </button>
           </li>
-          <li class="button__element">
+          <li class="button-list__element">
             <button type="button" class="button__fifth button__element--style">
               Marketing
             </button>
@@ -318,7 +318,7 @@
           </div>
           <div>
             <div class="footer__button">
-              <button type="submit" class="button-icon">Zapisz się</button>
+              <button type="submit" class="footer__button-icon">Zapisz się</button>
             </div>
           </div>
         </div>
